--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ else()
     message("Error!")
 endif()
 
-add_compile_definitions(XMCU_SOC_VENDOR=${XMCU_SOC_VENDOR} XMCU_SOC_ARCH_CORE_FAMILY=${XMCU_SOC_ARCH_CORE_FAMILY} XMCU_SOC_VENDOR_FAMILY=${XMCU_SOC_VENDOR_FAMILY} XMCU_SOC_ARCH=${XMCU_SOC_ARCH} XMCU_SOC_ARM_CORE_FAMILY_NAME=${XMCU_SOC_ARM_CORE_FAMILY_NAME})
+add_compile_definitions(XMCU_SOC_VENDOR=${XMCU_SOC_VENDOR} XMCU_SOC_ARCH_CORE_FAMILY=${XMCU_SOC_ARCH_CORE_FAMILY} XMCU_SOC_VENDOR_FAMILY=${XMCU_SOC_VENDOR_FAMILY} XMCU_SOC_ARCH=${XMCU_SOC_ARCH})
 add_compile_definitions(XMCU_SOC_STM32_FAMILY=${XMCU_SOC_VENDOR_FAMILY} XMCU_SOC_VENDOR_FAMILY_RM=${XMCU_SOC_VENDOR_FAMILY_RM} XMCU_SOC_VENDOR_MODEL=${XMCU_SOC_VENDOR_MODEL})
 add_compile_definitions(XMCU_ISR_CONTEXT=${XMCU_ISR_CONTEXT} XMCU_NOSTDLIB=${XMCU_NOSTDLIB} ${CMSIS_SOC_MODEL} CMSIS_SOC_FILE=stm32u0xx.h)
 add_compile_definitions(ARM_MATH_CM0PLUS ARM_MATH_ROUNDING)
